# pygoose

./: .gitignore  CHANGELOG.md  EXAMPLES.md  MANIFEST.in  PYPI_READINESS.md  README.md  example_fastapi.py  example_quickstart.py  main.py  pyproject.toml
docs/: ADVANCED_FEATURES.md  API_REFERENCE.md  CORE_CONCEPTS.md  EXAMPLES.md  FASTAPI_INTEGRATION.md  GETTING_STARTED.md  INDEX.md
examples/: FASTAPI_EXAMPLES.md  example_fastapi.py  example_fastapi_full.py  example_quickstart.py  example_showcase.py  test_api_endpoints.py  test_api_full.py
pygoose/: __init__.py
pygoose/core/: __init__.py  connection.py  document.py  queryset.py  reference.py
pygoose/fields/: __init__.py  base.py  encrypted.py  indexed.py
pygoose/integrations/: __init__.py  fastapi.py
pygoose/lifecycle/: __init__.py  hooks.py  observability.py
pygoose/plugins/: __init__.py  audit.py  soft_delete.py  timestamps.py
pygoose/utils/: __init__.py  exceptions.py  pagination.py  settings.py  types.py
tests/: conftest.py
tests/core/: test_advanced_populate.py  test_connection.py  test_document.py  test_queryset.py  test_reference.py  test_tracking.py
tests/fields/: test_encryption.py  test_indexes.py
tests/integrations/: test_fastapi.py
tests/lifecycle/: test_hooks.py  test_observability.py
tests/plugins/: test_audit.py  test_soft_delete.py  test_timestamps.py
tests/utils/: test_pagination.py
