[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pygoose"
version = "0.1.0"
description = "Async-first MongoDB ODM for Python, powered by Pydantic v2"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Bhargav Andhe", email = "bhargavandhe2310@gmail.com"}
]
keywords = [
    "mongodb",
    "odm",
    "async",
    "pydantic",
    "asyncio",
    "motor",
    "mongoose",
    "database",
    "orm"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Framework :: AsyncIO",
    "Framework :: FastAPI",
    "Framework :: Pydantic",
    "Typing :: Typed"
]
dependencies = [
    "pymongo>=4.8",
    "pydantic>=2.4",
    "uvicorn>=0.40.0",
]

[project.urls]
Homepage = "https://github.com/bhargavandhe/pygoose"
Documentation = "https://github.com/bhargavandhe/pygoose/tree/main/docs"
Repository = "https://github.com/bhargavandhe/pygoose.git"
"Bug Tracker" = "https://github.com/bhargavandhe/pygoose/issues"
Changelog = "https://github.com/bhargavandhe/pygoose/blob/main/CHANGELOG.md"

[project.optional-dependencies]
encryption = ["cryptography>=42.0"]
fastapi = ["fastapi>=0.100"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4",
    "cryptography>=42.0",
    "fastapi>=0.100",
    "httpx>=0.24",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--strict-markers -ra"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]  # Line length handled by line-length config

[tool.ruff.lint.isort]
known-first-party = ["pygoose"]

[dependency-groups]
dev = [
    "build>=1.4.0",
    "twine>=6.2.0",
]
